--- a/moj.html
+++ b/moj.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moja formicka</title>
+    <title>Moj html</title>
 </head>
 
 <body>
     <form>
         <div>
-            <label>Meno:</label><br />
-            <input placeholder="Vneste meno" name="meno" />
+            <label>Ime:</label><br />
+            <input placeholder="Vneste dsafd" name="meno" />
         </div>
         <div>
             <label>Priezvisko:</label><br />
@@ -23,7 +23,7 @@
             <input placeholder="0-120" type="number" name="vek" />
         </div>
         <div>
-            <button>Zasli</button>
+            <button>Zagasdgsli</button>
         </div>
     </form>
 </body>
