--- a/moj.html
+++ b/moj.html
@@ -12,7 +12,7 @@
     <form>
         <div>
             <label>Ime:</label><br />
-            <input placeholder="Vneste dsafd" name="meno" />
+            <input placeholder="Vneste meno" name="meno" />
         </div>
         <div>
             <label>Priezvisko:</label><br />
@@ -23,7 +23,7 @@
             <input placeholder="0-120" type="number" name="vek" />
         </div>
         <div>
-            <button>Zagasdgsli</button>
+            <button>Zasli</button>
         </div>
     </form>
 </body>
