--- a/responziv.html
+++ b/responziv.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="moj.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body class="container">
+<body class="container"> sdf as
     <div class="row">
         <div class="mojDiv col-md-3 col-sm-6"></div>
         <div class="mojDiv col-md-7 col-sm-6"></div>
